--- a/index.html
+++ b/index.html
@@ -100,12 +100,15 @@
                 <button class="primary-btn">Subcribe</button>
             </div>
          </section>
-   
-   
-
     </main>
 
-    <footer>
+    <footer class="footer-section"
+
+        <div id="footer-content">
+                <h3>Be Humble</h3>
+                <p>We will do it</p>
+                
+        </div>
         
     </footer>
 </body>
